# resetpropAlone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_android.sh
src/: main.c  main.cpp  resetprop_main.cpp
